<resources>
    <string name="app_name">Fragments Opening</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="value">value</string>
    <string name="enter_value">Enter value</string>
    <string name="set_value">Set value</string>
    <string name="not_valid_number">Not valid number</string>
    <string name="open_activity">Open Activity</string>
    <string name="no_camera">No camera app</string>
    <string name="no_sdcard_access">No SD Card!</string>
</resources>
