<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ucsoftworks.fragmentsopening.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />


    <TextView
        android:id="@+id/value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/value" />

    <EditText
        android:id="@+id/enter_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_value" />

    <Button
        android:id="@+id/set_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/set_value" />

    <Button
        android:id="@+id/open_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/open_activity" />


</LinearLayout>
